--- a/templates/login.html
+++ b/templates/login.html
@@ -20,11 +20,18 @@
             <div class="nav-wrapper">
               <a href="#!" class="brand-logo left"><i class="material-icons">book</i>Hello Books</a>
               <ul class="right hide-on-small-and-down">
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active"><a href="login.html">Login</a></li>
+                  <li><a href="signup.html">Sign Up</a></li>
                   <li><a href="library.html">Library</a></li>
               </ul>
-              <ul class="right hide-on-med-and-up side-nav.right-aligned">
-                  <li><a href="#" id="sidebar-show"><i class="material-icons">more_vert</i></a></li>
+              <ul id="slide-out" class="side-nav">
+                <<li><a href="index.html">Home</a></li>
+                <li class="active"><a href="login.html">Login</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="library.html">Library</a></li>
               </ul>
+            <a href="#" data-activates="slide-out" class="button-collapse hide-on-med-and-up right"><i class="material-icons">more_vert</i></a>
             </div>
           </nav>
         </header>
