--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,9 +20,15 @@
             <div class="nav-wrapper">
               <a href="#!" class="brand-logo left"><i class="material-icons">book</i>Hello Books</a>
               <ul class="right hide-on-small-and-down">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="login.html">Login</a></li>
+                  <li class="active"><a href="signup.html">Sign Up</a></li>
                   <li><a href="library.html">Library</a></li>
               </ul>
               <ul id="slide-out" class="side-nav">
+                <<li><a href="index.html">Home</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li class="active"><a href="signup.html">Sign Up</a></li>
                 <li><a href="library.html">Library</a></li>
               </ul>
             <a href="#" data-activates="slide-out" class="button-collapse hide-on-med-and-up right"><i class="material-icons">more_vert</i></a>
