separate webpack config

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
                   <li><a href="library.html">Library</a></li>
               </ul>
               <ul id="slide-out" class="side-nav">
-                <<li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="login.html">Login</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="library.html">Library</a></li>
