--- a/client/static/index.scss
+++ b/client/static/index.scss
@@ -132,10 +132,12 @@ main {
     top: auto !important;
     right: auto !important;
     top: 10% !important;
+    left: 35px;
 }
 
 @media only screen and (max-width: 601px) {
   #toast-container {
     top: 3rem !important;
+    left: 0px;
   }
 }
