Adjust side bar width

--- a/client/static/index.scss
+++ b/client/static/index.scss
@@ -51,6 +51,7 @@ nav {
     background-color: #011b33;
     color: white;
     font: sans-serif;
+    width: calc(100vw - 40%);
 
   a {
     color: white !important;
