--- a/client/static/index.scss
+++ b/client/static/index.scss
@@ -178,3 +178,19 @@ main {
 .borrowed-list {
   font: small-caps 1.3rem sans-serif;
 }
+
+.history-table {
+  overflow-x: scroll;
+}
+
+.top-30 {
+  margin-top: 30%;
+}
+
+.top-20 {
+  margin-top: 20%;
+}
+
+.progress .indeterminate {
+    background-color: #001b33;
+}
