feature(delete-book): refactor utitlity functions

--- a/client/static/index.scss
+++ b/client/static/index.scss
@@ -230,7 +230,7 @@ input[type=search]:not(.browser-default) {
 .select-wrapper:hover {
   .caret {
     color: #dddddd;
-    transform: scale(2) !important;
+    transform: scale(2);
     transition: all 0.5s ease-in-out;
   }
 }
