--- a/client/static/index.scss
+++ b/client/static/index.scss
@@ -37,16 +37,23 @@ nav {
   li.active {
     border-bottom: 4px solid blue;
   }
+}
 
+.header {
   a:hover {
-    background: transparent;
-    font-weight: bold;
-    transform: scale(1.35);
-    transition: all 0.4s ease-out;
-  }
+      background: transparent;
+      font-weight: bold;
+      transform: scale(1.15);
+      transition: all 0.4s ease-out;
+    }
+  @media screen and (min-width: 601px) {
+    a:hover {
+      transform: scale(1.35);
+    }
 
-  a.brand-logo:hover {
-    transform: scale(1.05);
+    a.brand-logo:hover {
+      transform: scale(1.05);
+    }
   }
 }
 
@@ -125,6 +132,10 @@ main {
   }
 }
 
+.suggestion {
+  border-bottom: $cool-Blue-Border;
+}
+
 // admin page styles
 .admin-form {
   background-color: $admin-form-blue;
@@ -157,15 +168,16 @@ main {
 }
 
 #toast-container {
-  left: 35px;
-  right: auto !important;
-  top: 10% !important;
+  top: 3rem !important;
+  left: 0;
+  height: 0;
 }
 
-@media only screen and (max-width: 601px) {
+@media only screen and (min-width: 601px) {
   #toast-container {
-    top: 3rem !important;
-    left: 0;
+    left: 35px;
+    right: auto !important;
+    top: 10% !important;
   }
 }
 
@@ -182,12 +194,20 @@ main {
   margin: 5px !important;
 }
 
+.books-table {
+  table-layout: fixed;
+
+  td {
+    overflow-x: scroll; 
+  }
+}
+
 .borrowed-list {
   font: small-caps 1.3rem sans-serif;
 }
 
 .history-table {
-  overflow-x: scroll;
+  overflow-x: scroll !important;
 }
 
 .top-30 {
@@ -272,6 +292,10 @@ input[type=search]:not(.browser-default) {
   margin-bottom: 10px;
 }
 
+.bottom-20 {
+  margin-bottom: 20px;
+}
+
 .filter-dropdown {
   input.select-dropdown{
     margin-bottom: 0;
@@ -293,4 +317,8 @@ input[type=search]:not(.browser-default) {
 
 .modal-footer {
   background-color: transparent !important;
+}
+
+.fill-page-height {
+  min-height: 90vh !important;
 }
